updated requirement.txt4 nad vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "freakfitbackend/wsgi.py",
+      "src": "manage.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "freakfitbackend/wsgi.py"
+      "dest": "manage.py"
     }
   ]
 }
