--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,6 @@
       "src": "/(.*)",
       "dest": "freakfitbackend/wsgi.py"
     }
-  ]
+  ],
+  "installCommand": "pip install --no-cache-dir setuptools -r requirements.txt"
 }
